fixed varaible names with le tiret du 6 par le tiret du 8

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,13 +3,13 @@
 country: FR
 state: RH
 locality: Lyon
-days-valid: 3650
+days_valid: 3650
 name: openvpn 
-remote-address: openvpn 
-use-compression: no
-use-encryption: yes
-use-ipv6: no
-use-mpls: no
+remote_address: openvpn 
+use_compression: no
+use_encryption: yes
+use_ipv6: no
+use_mpls: no
 auth: sha1
 cipher: aes256
-default-profile: openvpn
+default_profile: openvpn
