--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,7 +1,7 @@
 - name: Génération et export du certificate authority
   community.routeros.command:
     commands: 
-          - /certificate add name=ca-template common-name={{ ippubopenstack }} country={{ country }} state={{ state }} locality={{ locality }} days-valid={{ days-valid }} key-usage=key-cert-sign,crl-sign
+          - /certificate add name=ca-template common-name={{ ippubopenstack }} country={{ country }} state={{ state }} locality={{ locality }} days-valid={{ days_valid }} key-usage=key-cert-sign,crl-sign
           - /certificate sign ca-template ca-crl-host={{ ip_chr }} name="{{ id_client}}_CA"
           - /certificate set "{{ id_client}}_CA" trusted=yes
           - /certificate export-certificate "{{ id_client}}_CA"
@@ -9,7 +9,7 @@
 - name: Création du certificat serveur
   community.routeros.command:
     commands: 
-          - /certificate add name="{{ id_client}}_server-template" common-name={{ ippubopenstack }} days-valid={{ days-valid }}
+          - /certificate add name="{{ id_client}}_server-template" common-name={{ ippubopenstack }} days-valid={{ days_valid }}
           - /certificate sign server-template ca="{{ id_client}}_CA" name={{ ippubopenstack }}
           - /certificate set server trusted=yes
 
@@ -23,5 +23,5 @@
 - name: Run multiple commands and evaluate the output
   community.routeros.command:
     commands:
-      - /ppp profile add local-address={{ vpn_gw }} name={{ name }} remote-address={{ remote-address }} use-compression={{ use-compression }} use-encryption={{ use-encryption }} use-ipv6={{ use-ipv6 }} use-mpls={{ use-mpls }}
-      - /interface ovpn-server server set auth=sha1 cipher=aes256 default-profile=openvpn require-client-certificate=yes enabled=yes certificate={{ ippubopenstack }}
+      - /ppp profile add local-address={{ vpn_gw }} name={{ name }} remote-address={{ remote_address }} use-compression={{ use_compression }} use-encryption={{ use_encryption }} use-ipv6={{ use_ipv6 }} use-mpls={{ use_mpls }
+      - /interface ovpn-server server set auth=sha1 cipher=aes256 default_profile=openvpn require-client-certificate=yes enabled=yes certificate={{ ippubopenstack }}
