--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -13,16 +13,16 @@
          - /certificate export-certificate "{{ id_client}}_CA"
   when: certificates is search("0")
 
-- name: Vérification de la singature du certificat
+- name: Vérification que la template n'est plus la
   routeros_command:
     commands:
           - /certificate print count-only where name="ca-template"
   register: certificates
 
-- name: Example using fail and when together
+- name: Arrêt du job si la template est toujours présente
   fail:
-    msg: The system may not be provisioned according to the CMDB status.
-  when: certificates is search("0")
+    msg: Template ca-template toujours présente sur le router, vérifier avec WinBox
+  when: certificates is search("1")
 
 #- name: Création du certificat serveur
 #  community.routeros.command:
