--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -24,17 +24,17 @@
     msg: Template ca-template toujours présente sur le router, vérifier avec WinBox et supprimer TOUS les certificats sur le routeur.
   when: certificates is search("1")
 
-- name: Création du certificat serveur et signature avec le CA 1
+- name: Création du certificat serveur
   community.routeros.command:
     commands:
           - /certificate add name="{{ id_client }}_server-template" common-name="{{ id_client }}_certificate" days-valid={{ days_valid }}
 
-- name: Création du certificat serveur et signature avec le CA 2
+- name: Signature du certificat avec le CA
   community.routeros.command:
     commands:
           - /certificate sign "{{ id_client }}_server-template" ca="{{ id_client }}_CA" name="{{ id_client }}_certificate"
 
-- name: Création du certificat serveur et signature avec le CA 3
+- name: Trusted du certificat
   community.routeros.command:
     commands:
           - /certificate set "{{ id_client }}_certificate" trusted=yes
