--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,7 +1,7 @@
 - name: Vérification de la présence d'une CA
   routeros_command:
     commands:
-          - /certificate print count-only where name="h9999_CA"
+          - /certificate print count-only where name="{{ id_client }}_CA"
   register: certificates
 
 - name: Génération et export du CA
